<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="firebase_push_notification_channel_id" translatable="false">kotha_dialer_push_notification_channel_id_100</string>
    <string name="firebase_push_notification_channel_name" translatable="false">Kotha Dialer Calls &amp; Messages </string>
    <string name="firebase_push_notification_channel_description" translatable="false">Calls and Message notifications from \'Kotha Dialer\'</string>
    <string name="progress_dialog_message" translatable="false">Please wait&#8230;</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="search_view_query_hint" translatable="false">Search contacts</string>
    <string name="call_status_dialing" translatable="false">Dialing&#8230;</string>
    <string name="call_status_ringing" translatable="false">Ringing&#8230;</string>
    <string name="call_status_end" translatable="false">Call end</string>
    <string name="call_type_out_going" translatable="false">Outgoing</string>
    <string name="call_type_incoming" translatable="false">Incoming</string>
    <string name="call_type_missed" translatable="false">Missed</string>
    <string name="call_type_all" translatable="false">All</string>
    <string name="call_accept_button_text" translatable="false">Accept</string>
    <string name="login_fail_message" translatable="false">Invalid User ID or Password</string>
    <string name="account_info_save_failed_message" translatable="false">Failed to save account info</string>
    <string name="account_info_saved_success_message" translatable="false">Saved successfully</string>
    <string name="account_settings" >Account settings</string>
    <string name="custom_settings">Custom settings</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="log_out">Log out</string>
    <string name="exit_app">Exit</string>
    <string name="balance">Balance</string>
    <string name="contact_us">Contact Us</string>
    <string name="tell_to_friend">Tell To Friend</string>
    <string name="ringtone_settings" >Set Ringtone</string>
    <string name="hint_user_id">User ID</string>
    <string name="hint_password">Password</string>
    <string name="label_sever_ip">Server IP</string>
    <string name="label_username">Username</string>
    <string name="label_name">Name</string>
    <string name="label_password">Password</string>
    <string name="label_save_button">Save</string>
    <string name="call_status_incoming">Incoming call…</string>
    <string name="error_while_contacting_internet">Service unavailable : Check your internet connection</string>
    <string name="contacts_title">Contacts</string>
    <string name="dialer_title">Dialer</string>
    <string name="history_title">Call History</string>
    <string name="conference_title">Conference</string>
    <string name="settings_title">Settings</string>
    <string name="connection_on">Online</string>
    <string name="connection_off">Offline</string>
    <string name="add_conference">Add conference</string>
    <string name="contact_already_exists_warning_message">Contact already added!</string>
    <string name="dialpad_one">1</string>
    <string name="dialpad_two">2</string>
    <string name="dialpad_three">3</string>
    <string name="dialpad_four">4</string>
    <string name="dialpad_five">5</string>
    <string name="dialpad_six">6</string>
    <string name="dialpad_seven">7</string>
    <string name="dialpad_eight">8</string>
    <string name="dialpad_nine">9</string>
    <string name="dialpad_zero">0</string>
    <string name="dialpad_plus">+ *</string>
    <string name="dialpad_hash">#</string>
    <string name="dialpad_warning_message">Enter Number</string>
    <string name="number">Number</string>
    <string name="hint_full_name">Enter Full Name</string>
    <string name="hint_mobile_number">Enter Mobile Number</string>
    <string name="hint_otp">Enter OTP</string>
    <string name="addtocontact">ADD TO CONTACT</string>
    <string name="hint_name_req">Name <font color='red' size="15">*</font></string>
    <string name="hint_company_id_req">Company ID <font color='red' size="15">*</font></string>
    <string name="hint_domain_req">Domain <font color='red' size="15">*</font></string>
    <string name="hint_user_req">User <font color='red' size="15">*</font></string>
    <string name="hint_password_req">Password <font color='red' size="15">*</font></string>
    <string name="hint_re_type_pass_req">Re-Type Password <font color='red' size="15">*</font></string>
    <string name="app_name" translatable="false">&appName;</string>
    <string name="app_name_debug" translatable="false">&appName;</string>
    <string name="service_name">&appName; Service</string>
    <string name="service_auto_start_description">&appName; has been started automatically</string>
    <string name="service_description">This is required to receive calls while in background</string>
    <string name="sync_account_name">&appName; contacts</string>
    <string name="about_link" translatable="false">https://linphone.org</string>
    <string name="about_privacy_policy_link" translatable="false">https://www.linphone.org/privacy-policy</string>
    <string name="about_license_link" translatable="false">https://www.gnu.org/licenses/gpl-3.0.html</string>
    <string name="about_version" translatable="false">&appName; Android %s</string>
    <string name="about_liblinphone_sdk_version" translatable="false">&appName; SDK %s</string>
    <string name="about_privacy_policy">Visit our privacy policy</string>
    <string name="about_text" translatable="false">GNU General Public License V3\n © 2010–2020 Belledonne Communications</string>
    <string name="logs_upload_failure">Failed to upload logs!</string>
    <string name="logs_reset_complete">Logs have been cleared</string>
    <string name="logs_url_copied_to_clipboard">Logs url copied into clipboard</string>
    <string name="about_bugreport_email" translatable="false">linphone-android@belledonne-communications.com</string>
    <string name="error">Error</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="select_your_country">Select your country</string>
    <string name="international_prefix">Prefix</string>
    <string name="assistant_choose_country">Choose a country</string>
    <string name="assistant_choose_country_title">Country name or prefix</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="domain">Domain</string>
    <string name="sip_address">SIP address</string>
    <string name="sip_addresses">SIP addresses</string>
    <string name="cancel">Cancel</string>
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="share_uploaded_logs_link">Share logs link using…</string>
    <string name="invalid_email">Invalid email</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="transport">Transport</string>
    <string name="transport_udp">UDP</string>
    <string name="transport_tcp">TCP</string>
    <string name="transport_tls">TLS</string>
    <string name="hash_algorithm_md5">MD5</string>
    <string name="hash_algorithm_sha256">SHA-256</string>
    <string name="app_description">the <i>libre</i> SIP client</string>
    <string name="status_connected">Online</string>
    <string name="status_not_connected">Failed</string>
    <string name="status_in_progress">Inprogress</string>
    <string name="status_error">Failed</string>
    <string name="no_account_configured">No account configured</string>
    <string name="about">About</string>
    <string name="assistant">Assistant</string>
    <string name="recordings">Recordings</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="history_calls_list">Calls</string>
    <string name="no_call_history">No call in your history</string>
    <string name="no_missed_call_history">No missed call in your history</string>
    <string name="history_delete_one_dialog">Do you want to delete this record?</string>
    <string name="history_delete_many_dialog">Do you want to delete these records?</string>
    <plurals name="history_delete_dialog" translatable="false">
        <item quantity="one">@string/history_delete_one_dialog</item>
        <item quantity="other">@string/history_delete_many_dialog</item>
    </plurals>
    <string name="contact_invite_friend">Invite</string>
    <string name="no_contact">No contact in your address book.</string>
    <string name="no_sip_contact">No SIP contact in your address book.</string>
    <string name="contact_filter_hint">Search a contact</string>
    <string name="contact_send_sms_invite_text">Hello, join me on &appName;! You can download it for free at %s</string>
    <string name="contact_send_sms_invite_download_link" translatable="false">https://linphone.org/download</string>
    <string name="contact_last_name">Last name</string>
    <string name="contact_first_name">First name</string>
    <string name="contact_organization">Organization</string>
    <string name="contact_choose_existing_or_new_to_add_number">Select a contact or create a new one</string>
    <string name="contact_editor_write_permission_denied">Write Contacts permission denied, can\'t edit contact</string>
    <string name="contact_delete_one_dialog">Do you want to delete this contact?\nIt will also be removed from your device addressbook</string>
    <string name="contact_delete_many_dialog">Are you sure you want to delete these contacts?\nThey will also be removed from your device addressbook</string>
    <plurals name="contact_delete_dialog" translatable="false">
        <item quantity="one">@string/contact_delete_one_dialog</item>
        <item quantity="other">@string/contact_delete_many_dialog</item>
    </plurals>
    <string name="contact_new_choose_sync_account">Choose where to save the contact</string>
    <string name="contact_local_sync_account">Store locally</string>
    <string name="dialer_address_bar_hint">Enter a number or an address</string>
    <string name="debug_popup_title">Debug</string>
    <string name="debug_popup_enable_logs">Enable logs</string>
    <string name="debug_popup_disable_logs">Disable logs</string>
    <string name="debug_popup_send_logs">Send logs</string>
    <string name="debug_popup_show_config_file">Show config file</string>
    <string-array name="popup_send_log" translatable="false">
        <item>@string/debug_popup_disable_logs</item>
        <item>@string/debug_popup_send_logs</item>
        <item>@string/debug_popup_show_config_file</item>
        <item>@string/cancel</item>
    </string-array>
    <string-array name="popup_enable_log" translatable="false">
        <item>@string/debug_popup_enable_logs</item>
        <item>@string/debug_popup_show_config_file</item>
        <item>@string/cancel</item>
    </string-array>
    <string name="no_chat_history">No conversations</string>
    <string name="chat_remote_is_composing">Remote is writing&#8230;</string>
    <string name="chat_event_conference_created">You have joined the group</string>
    <string name="chat_event_conference_destroyed">You have left the group</string>
    <string name="chat_event_participant_added">%s has joined</string>
    <string name="chat_event_participant_removed">%s has left</string>
    <string name="chat_event_device_added">new device for %s</string>
    <string name="chat_event_device_removed">device for %s removed</string>
    <string name="chat_event_subject_changed">new subject: %s</string>
    <string name="chat_event_admin_set">%s is admin</string>
</resources>