<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="1dp"
            android:weightSum="2">


            <EditText
                android:id="@+id/editText"
                style="@style/InvisibleFocusHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:gravity="center"
                android:hint=""
                android:textAlignment="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="phone"
                android:maxLength="14"
                android:padding="10dp"
                android:text=""
                android:textSize="28sp"
                tools:ignore="LabelFor,RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnAdd_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/addtocontact"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="6.2"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/btnOne"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_button"
                    android:text="@string/dialpad_one"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnTwo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_button"
                    android:text="@string/dialpad_two"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnThree"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_button"
                    android:text="@string/dialpad_three"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/btnFour"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_button"
                    android:text="@string/dialpad_four"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnFive"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_button"
                    android:text="@string/dialpad_five"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnSix"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_button"
                    android:text="@string/dialpad_six"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/btnSeven"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_button"
                    android:text="@string/dialpad_seven"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnEight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_button"
                    android:text="@string/dialpad_eight"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnNine"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_button"
                    android:text="@string/dialpad_nine"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/btnAterisk"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_button"
                    android:text="@string/dialpad_plus"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnZero"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_button"
                    android:text="@string/dialpad_zero"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/btnHash"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/my_button"
                    android:text="@string/dialpad_hash"
                    android:textSize="30sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:id="@+id/btnCall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:adjustViewBounds="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="100dp"
                    android:layout_marginRight="100dp"
                    android:background="@drawable/call_button_image"
                    tools:ignore="RtlCompat" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="38dp"
                    android:layout_marginEnd="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_height="35dp"
                    android:background="@drawable/ic_delete"
                    tools:ignore="RtlCompat" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/bottom_contact_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:background="#66000000"
        android:clickable="false"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/cancel_buttonshape"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/addTocontacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="Create New Contact"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha=".3"
                    android:background="@color/ef_grey" />

                <TextView
                    android:id="@+id/addToexisting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="Add to Existing Contact"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/cancel_buttonshape"
                android:gravity="center"
                android:padding="15dp"
                android:text="Cancel"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>