<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:gravity="top"
    tools:context=".activities.RegistrationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/KothaDialerAppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:popupTheme="@style/KothaDialerAppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imgb"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:visibility="visible"
        android:src="@drawable/rtc_hubs_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/re_send_otp_login_tv"
        android:gravity="center"
        android:text="Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">


            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_field_back"
                android:drawablePadding="5dp"
                android:ems="1"
                android:gravity="left|center_vertical"
                android:hint="@string/hint_name_req"
                android:text=""
                android:inputType="text"
                android:maxLength="200"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp" />

            <EditText
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_field_back"
                android:drawablePadding="5dp"
                android:ems="1"
                android:gravity="left|center_vertical"
                android:hint="@string/hint_company_id_req"
                android:inputType="phone"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp" />

            <EditText
                android:id="@+id/mobileno"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_field_back"
                android:drawablePadding="5dp"
                android:ems="1"
                android:gravity="left|center_vertical"
                android:hint="@string/hint_user_req"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_field_back"
                android:drawablePadding="5dp"
                android:ems="1"
                android:gravity="left|center_vertical"
                android:hint="@string/hint_password_req"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp" />

            <EditText
                android:id="@+id/retypepassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_field_back"
                android:drawablePadding="5dp"
                android:ems="1"
                android:gravity="left|center_vertical"
                android:hint="@string/hint_re_type_pass_req"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_field_back"
                android:drawablePadding="5dp"
                android:ems="1"
                android:gravity="start|center_vertical"
                android:hint="email"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edit_text"
                android:drawableStart="@drawable/ic_password"
                android:drawableLeft="@drawable/ic_password"
                android:ems="1"
                android:gravity="center"
                android:hint="@string/hint_password"
                android:text="rtchubs"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient_button"
                android:text="Register"
                android:textColor="@color/white" />



            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:gravity="center">-->
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="If you are not register yet click "-->
            <!--android:textSize="16sp"-->
            <!--android:textColor= "@android:color/darker_gray"/>-->
            <!--<Button-->
            <!--android:id="@+id/btn_registration"-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:text="here"-->
            <!--android:textAllCaps="false"/>-->
            <!--</LinearLayout>-->

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>